add computerPlay function

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   </head>
   <body>
     <script>
-
+      let choices = ['rocks', 'papers', 'scissors'];
+      function computerPlay() {
+        return choices[Math.floor(Math.random()*choices.length)];
+      }
     </script>
   </body>
-
-
 
 
 </html>
